fixed playlist layout on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -68,6 +68,11 @@ body {
     #genrify{
         display: none;
     }
+
+    .playlist{
+        width: 100%;
+        height: 50vh;
+    }
 }
 
 @keyframes buttonAnimation {
